# demo_agency_assistant

./: API.md  AUTO_DIALOGUE_README.md  DESIGN_AGENCY_COMMUNICATION.md  DESIGN_AGENCY_RECOMMEND.md  DESIGN_ES_INDEX.md  DESIGN_PRODUCT_RECOMMEND.md  DESIGN_PROFILE_ANALYZE.md  Dockerfile  RAG_README.md  README.md  main.py  pyproject.toml  report.md  test_agency_assistant.py  test_agency_assistant_auto.py  test_agency_communication.py  test_agency_recommend.py  test_product_recommend.py  test_profile_analyzer.py  test_structured_suggestions.py  view_auto_dialogue.py
agent/: __init__.py  agency_assistant.py  agency_communicator.py  agency_recommender.py  product_recommender.py  profile_analyzer.py  rag_pit_detector.py
api/: __init__.py  agency_assistance.py  agency_communication.py  agency_recommendation.py  product_recommendation.py  profile_analysis.py
data/: generated_info.json  insurance_pits_extracted.json  insurance_pits_merged.json  pit_types_generated.json  shenlanbao_避坑指南_20250730_114302.json
docs/: README.md  agency-communication-test.md  agency-recommender-test.md  product-recommender-test.md  profile-analyzer-test.md
logs/: auto_dialogue_20250801_174358.json  auto_dialogue_20250801_183506.json  auto_dialogue_20250801_183609_test1.json  auto_dialogue_20250801_183641.json  auto_dialogue_20250801_184411_test1.json  auto_dialogue_20250801_194525.json  auto_dialogue_20250801_194559_test1.json  auto_dialogue_20250801_194707_test2.json  auto_dialogue_20250801_194819_test3.json  auto_dialogue_20250801_195404.json  auto_dialogue_20250801_195431_test1.json  (+37 more)
(+141 files in other folders)
